some small visual changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="navbar-expand-sm">
-            <nav class="navbar navbar-dark">
+            <nav class="navbar cont navbar-dark">
                 <div class="container-fluid">
                     <div id="navbar-brand">
                         <a class="navbar-brand font-weight-bold" href="index.html">
@@ -44,9 +44,9 @@
         </div>
     </header>
     <section class="section1 position-relative">
-        <div class="content position-absolute top-50 start-0 p-3">
-            <h2 class="fw-bold text-white text-center">Welcome to the <span class="brand" style="color:#00C2FF;">New Education Center</span></h2>
-            <p class="text-center text-white-50 fs-4">Best advanced level tutory in kilinochchi</p>
+        <div class="content position-absolute top-50  p-3 text-container">
+            <h2 class="fw-bold text-white text-center welcome-text">Welcome to the <span class="brand" style="color:#00C2FF;">New Education Center</span></h2>
+            <p class="text-center  fs-4 welcome-text-sub">Best advanced level tutory in kilinochchi</p>
         </div> 
         <div class="backgroundImage"></div> 
         
